force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_API_Key__c.field-meta.xml
<CustomField>
    <fullName>ARTL_API_Key__c</fullName>
    <label>API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>