force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_Authorization__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Authorization__c</fullName>
    <label>Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>