force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/listViews/All_Config_Records.listView-meta.xml
<ListView>
    <fullName>All_Config_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ARTL_API_Key__c</columns>
    <columns>ARTL_EndPointURL__c</columns>
    <columns>ARTL_IntegrationProcedureName__c</columns>
    <columns>ARTL_NameCredentials__c</columns>
    <columns>ARTL_Operation__c</columns>
    <columns>ARTL_Pattern__c</columns>
    <columns>ARTL_Retry__c</columns>
    <columns>ARTL_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Config Records</label>
</ListView>